==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

 - Fixed an issue on ``RENAME`` a partitioned table which would result in data
   loss if a new table is created with the old name of the renamed table and
   afterwards dropped. Issue: https://github.com/crate/crate/issues/5823