@@ -21,6 +21,10 @@ Changes
 Fixes
 =====
 
+ - Fixed support for range queries on the ``_id`` and ``_uid`` columns, range
+   queries on these columns weren't working at all since v2.0.0.
+   Issue: https://github.com/crate/crate/issues/5845
+
  - Fixed an issue on ``RENAME`` a partitioned table which would result in data
    loss if a new table is created with the old name of the renamed table and
    afterwards dropped. Issue: https://github.com/crate/crate/issues/5823
